[tool.poetry]
name = "macic"
version = "0.1.0"
description = "Multiple Allelic Comparison to Identify Candidate genes"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
marimo = "^0.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
